Fix background gradient shifting when page grows.

--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,8 @@
  
  body {
      background: linear-gradient(#15cc8f, #351190);
-     height: 100vh;
+     min-height: 100%;
+     background-attachment: fixed;
      padding: 0 10rem;
  }
  
